Site plus ésthétique et fluide

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Calculateur Hydrique</title>
+    <title>H2Optimal</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Calculateur d'Hydratation</h1>
+        <h1>H2Optimal</h1>
         <form id="hydrationForm">
             <div class="form-group">
                 <input type="number" id="weight" placeholder="Poids (en kg)" required>
